[package]
name = "test-sep-40-price-feed"
version = "0.1.0"
authors = ["Script3 <support@script3.io>"]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
sep-40-price-feed = { path = "../sep-40" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
