[package]
name = "mock-sep-40-oracle"
version = "0.1.1"
authors = ["Script3 <support@script3.io>"]
license = "MIT"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
sep-40-oracle = { path = "../sep-40" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
